Small min with bug
Putting some min with parameter to some elements when flexible boxing
pushing them down too much

--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ div.content-container {
   border:1px solid grey;
   margin-top: 10px;
   /*max-width: 600px;*/
-   /*  min-width: 300px;*/
+  min-width: 120px;
   margin-right: 10px;
   padding:5px;
   border-radius:10px 10px 10px 10px;
@@ -170,7 +170,7 @@ article.post:last-of-type {
 	border-radius:10px 10px 10px 10px;
 	box-shadow:rgb(110,110,110) 10px 10px 10px;
 	display:-webkit-box;
-	min-width:600px;
+	min-width:960px;
 	border:1px solid black;
   height: auto;
 }
